# cosmic-applet-workspace-apps

./: .gitignore  Cargo.toml  README.md  check_fields.rs  justfile  plan.md  test_geometry.rs
i18n/en/: cosmic_applet_workspaces_apps.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  desktop_matcher.rs  icons.rs  main.rs  wayland_subscription.rs
